css/blog.css
/* Bootstrap Hacks */
.jumbotron {
  padding: 15px;
  margin-bottom: 30px;
  color: inherit;
  background-color: #f5f5f5;
}

.jumbotron p {
  margin-bottom: 10px;
  font-size: 15px;
  font-weight: 200;
}

.jumbotron h3 {
  margin-bottom: 15px;
}

.header-panel {
  height: 100px;
  margin-top: -10px;
}

.page-content {
  margin-bottom: 5px;
  font-size: 15px;
}

.time {
  display: none;
}

@media (min-width: 768px) {
  .time {
    display: block;
  }
}

.time .jumbotron {
  padding: 5px;
  text-align: center;
}

.time .jumbotron p {
  margin-bottom: 5px;
  color: gray;
}

.time .jumbotron h3 {
  margin-top: 0;
}

.align-center {
  text-align: center;
}

.align-right {
  text-align: right;
}

.sidebar-module {
  padding: 15px;
}
.sidebar-module-inset {
  padding: 15px;
  background-color: #f5f5f5;
}
.sidebar-module-inset p:last-child,
.sidebar-module-inset ul:last-child,
.sidebar-module-inset ol:last-child {
  margin-bottom: 0;
}

.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: relative;
    top: 0;
    left: 10px;
    display:block;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
  }
}

footer {
  padding: 40px 0;
  color: #999;
  text-align: center;
  background-color: #f9f9f9;
  border-top: 1px solid #e5e5e5;
}

/*
 * Style tweaks
 * --------------------------------------------------
*/
body {
  padding-top: 70px;
}
footer {
  padding: 30px 0;
}

